Update Polish translation

--- a/po/pl.po
+++ b/po/pl.po
@@ -1,19 +1,19 @@
 # Polish translation for network-manager-applet.
-# Copyright © 2006-2020 the network-manager-applet authors.
+# Copyright © 2006-2021 the network-manager-applet authors.
 # This file is distributed under the same license as the network-manager-applet package.
 # Wadim Dziedzic <wdziedzic@aviary.pl>, 2006-2008.
 # Tomasz Dominikowski <dominikowski@gmail.com>, 2007-2009.
 # Piotr Zaryk <pzaryk@aviary.pl>, 2008.
-# Piotr Drąg <piotrdrag@gmail.com>, 2009-2020.
-# Aviary.pl <community-poland@mozilla.org>, 2006-2020.
+# Piotr Drąg <piotrdrag@gmail.com>, 2009-2021.
+# Aviary.pl <community-poland@mozilla.org>, 2006-2021.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: network-manager-applet\n"
-"Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-"
-"applet/\n"
-"POT-Creation-Date: 2021-07-05 11:47+0200\n"
-"PO-Revision-Date: 2020-09-20 10:10+0200\n"
+"Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-applet/"
+"issues\n"
+"POT-Creation-Date: 2021-07-08 18:17+0000\n"
+"PO-Revision-Date: 2021-07-11 12:50+0200\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <community-poland@mozilla.org>\n"
 "Language: pl\n"
@@ -30,6 +30,10 @@ msgstr "Sieć"
 #: nm-applet.desktop.in:4
 msgid "Manage your network connections"
 msgstr "Zarządzanie połączeniami sieciowymi"
+
+#: nm-applet.desktop.in:5
+msgid "nm-device-wireless"
+msgstr "nm-device-wireless"
 
 #: nm-connection-editor.appdata.xml.in:7
 msgid "NetworkManager"
@@ -66,6 +70,10 @@ msgstr "Zaawansowana konfiguracja sieci"
 #: nm-connection-editor.desktop.in:4
 msgid "Manage and change your network connection settings"
 msgstr "Zarządzanie ustawieniami połączeń sieciowych"
+
+#: nm-connection-editor.desktop.in:5
+msgid "preferences-system-network"
+msgstr "preferences-system-network"
 
 #: shared/nm-utils/nm-shared-utils.c:793
 #, c-format
@@ -622,8 +630,8 @@ msgstr ""
 "Wadim Dziedzic <wdziedzic@aviary.pl>, 2006-2008\n"
 "Tomasz Dominikowski <dominikowski@gmail.com>, 2007-2009\n"
 "Piotr Zaryk <pzaryk@aviary.pl>, 2008\n"
-"Piotr Drąg <piotrdrag@gmail.com>, 2009-2020\n"
-"Aviary.pl <community-poland@mozilla.org>, 2006-2020"
+"Piotr Drąg <piotrdrag@gmail.com>, 2009-2021\n"
+"Aviary.pl <community-poland@mozilla.org>, 2006-2021"
 
 #: src/applet-dialogs.c:1147
 msgid ""
@@ -1205,13 +1213,12 @@ msgid "_Primary"
 msgstr "_Główne"
 
 #: src/connection-editor/ce-page-bond.ui:495
-#, fuzzy
 msgid ""
 "The interface name of the primary device. If set, this device will always be "
 "the active port when it is available."
 msgstr ""
 "Nazwa interfejsu głównego urządzenia. Jeśli jest ustawione, to urządzenie "
-"będzie aktywnym urządzeniem podrzędnym zawsze, kiedy jest dostępne."
+"będzie aktywnym portem zawsze, kiedy jest dostępne."
 
 #: src/connection-editor/ce-page-bond.ui:507
 #: src/connection-editor/ce-page-ethernet.ui:188
@@ -2137,8 +2144,8 @@ msgid "C_KN"
 msgstr "C_KN"
 
 #: src/connection-editor/ce-page-macsec.ui:206
-msgid " The pre-shared Connectivity-association Key Name"
-msgstr " Nazwa uprzednio udostępnionego CAK"
+msgid "The pre-shared Connectivity-association Key Name"
+msgstr "Nazwa uprzednio udostępnionego CAK"
 
 #: src/connection-editor/ce-page-macsec.ui:217
 msgid "Parameters"
@@ -3903,28 +3910,27 @@ msgstr "Połączenie MACsec %d"
 
 #: src/connection-editor/page-master.c:221
 #: src/connection-editor/page-master.c:232
-#, fuzzy
 msgid "Duplicate ports"
-msgstr "Podwójne podrzędne"
+msgstr "Podwójne porty"
 
 #: src/connection-editor/page-master.c:222
-#, fuzzy, c-format
+#, c-format
 msgid "Ports “%s” and “%s” both apply to device “%s”"
-msgstr "Podrzędne „%s” i „%s” stosują się do urządzenia „%s”"
+msgstr "Porty „%s” i „%s” stosują się do urządzenia „%s”"
 
 #: src/connection-editor/page-master.c:233
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Ports “%s” and “%s” apply to different virtual ports (“%s” and “%s”) of the "
 "same physical device."
 msgstr ""
-"Podrzędne „%s” i „%s” stosują się do różnych wirtualnych portów („%s” "
-"i „%s”) tego samego fizycznego urządzenia."
+"Porty „%s” i „%s” stosują się do różnych wirtualnych portów („%s” i „%s”) "
+"tego samego fizycznego urządzenia."
 
 #: src/connection-editor/page-master.c:357
 #, c-format
 msgid "%s port %d"
-msgstr ""
+msgstr "%s port %d"
 
 #: src/connection-editor/page-mobile.c:297
 msgid "Could not load mobile broadband user interface."
@@ -4258,11 +4264,10 @@ msgstr "Użycie:"
 
 #: src/main.c:30
 msgid ""
-"This program is a component of NetworkManager (https://wiki.gnome.org/"
-"Projects/NetworkManager/)."
+"This program is a component of NetworkManager (https://networkmanager.dev)."
 msgstr ""
-"Ten program jest częścią projektu NetworkManager (https://wiki.gnome.org/"
-"Projects/NetworkManager/)."
+"Ten program jest częścią projektu NetworkManager (https://networkmanager."
+"dev)."
 
 #: src/main.c:31
 msgid ""
@@ -4388,217 +4393,3 @@ msgstr "Certyfikaty PEM (*.pem, *.crt, *.cer)"
 msgid "DER, PEM, or PKCS#12 private keys (*.der, *.pem, *.p12, *.key)"
 msgstr ""
 "Certyfikaty DER, PEM lub klucze prywatne PKCS#12 (*.der, *.pem, *.p12, *.key)"
-
-#~ msgid "nm-device-wireless"
-#~ msgstr "nm-device-wireless"
-
-#~ msgid "preferences-system-network"
-#~ msgstr "preferences-system-network"
-
-#~ msgid "missing EAP-FAST PAC file"
-#~ msgstr "brak pliku PAC EAP-FAST"
-
-#~ msgid "GTC"
-#~ msgstr "GTC"
-
-#~ msgid "Choose a PAC file"
-#~ msgstr "Wybór pliku PAC"
-
-#~ msgid "PAC files (*.pac)"
-#~ msgstr "Pliki PAC (*.pac)"
-
-#~ msgid "All files"
-#~ msgstr "Wszystkie pliki"
-
-#~ msgid "Anonymous"
-#~ msgstr "Anonimowo"
-
-#~ msgid "Authenticated"
-#~ msgstr "Uwierzytelnienie"
-
-#~ msgid "Both"
-#~ msgstr "Oba"
-
-#~ msgid "Anony_mous identity"
-#~ msgstr "Anoni_mowa tożsamość"
-
-#~ msgid "PAC _file"
-#~ msgstr "_Plik PAC"
-
-#~ msgid "_Inner authentication"
-#~ msgstr "Wewnętrzne uw_ierzytelnianie"
-
-#~ msgid "Allow automatic PAC pro_visioning"
-#~ msgstr "Automatyczne za_bezpieczanie PAC"
-
-#~ msgid "missing EAP-LEAP username"
-#~ msgstr "brak nazwy użytkownika EAP-LEAP"
-
-#~ msgid "missing EAP-LEAP password"
-#~ msgstr "brak hasła EAP-LEAP"
-
-#~ msgid "MD5"
-#~ msgstr "MD5"
-
-#~ msgid "Version 0"
-#~ msgstr "Wersja 0"
-
-#~ msgid "Version 1"
-#~ msgstr "Wersja 1"
-
-#~ msgid "No CA certificate is _required"
-#~ msgstr "Certyfikat CA nie jest _wymagany"
-
-#~ msgid "PEAP _version"
-#~ msgstr "_Wersja PEAP"
-
-#~ msgid "Suffix of the server certificate name."
-#~ msgstr "Przyrostek nazwy certyfikatu serwera."
-
-#~ msgid "_Domain"
-#~ msgstr "_Domena"
-
-#~ msgid "missing EAP username"
-#~ msgstr "brak nazwy użytkownika EAP"
-
-#~ msgid "missing EAP password"
-#~ msgstr "brak hasła EAP"
-
-#~ msgid "missing EAP client Private Key passphrase"
-#~ msgstr "brak hasła klucza prywatnego klienta EAP"
-
-#~ msgid "P_rivate Key Passphrase"
-#~ msgstr "Hasło klucza p_rywatnego"
-
-#~ msgid "Sh_ow passphrase"
-#~ msgstr "_Wyświetlanie hasła"
-
-#~ msgid "missing EAP-TLS identity"
-#~ msgstr "brak tożsamości EAP-TLS"
-
-#~ msgid "no user certificate selected"
-#~ msgstr "nie wybrano certyfikatu użytkownika"
-
-#~ msgid "selected user certificate file does not exist"
-#~ msgstr "wybrany plik certyfikatu użytkownika nie istnieje"
-
-#~ msgid "no key selected"
-#~ msgstr "nie wybrano klucza"
-
-#~ msgid "selected key file does not exist"
-#~ msgstr "wybrany plik klucza nie istnieje"
-
-#~ msgid "I_dentity"
-#~ msgstr "_Tożsamość"
-
-#~ msgid "MSCHAPv2 (no EAP)"
-#~ msgstr "MSCHAPv2 (bez EAP)"
-
-#~ msgid "undefined error in 802.1X security (wpa-eap)"
-#~ msgstr "nieokreślony błąd w zabezpieczeniach 802.1X (WPA-EAP)"
-
-#~ msgid "no CA certificate selected"
-#~ msgstr "nie wybrano certyfikatu CA"
-
-#~ msgid "selected CA certificate file does not exist"
-#~ msgstr "wybrany plik certyfikatu CA nie istnieje"
-
-#~ msgid "Unknown error validating 802.1X security"
-#~ msgstr "Nieznany błąd podczas sprawdzania poprawności zabezpieczeń 802.1X"
-
-#~ msgid "TLS"
-#~ msgstr "TLS"
-
-#~ msgid "PWD"
-#~ msgstr "PWD"
-
-#~ msgid "FAST"
-#~ msgstr "FAST"
-
-#~ msgid "Tunneled TLS"
-#~ msgstr "Tunelowane TLS"
-
-#~ msgid "Protected EAP (PEAP)"
-#~ msgstr "Chronione EAP (PEAP)"
-
-#~ msgid "Externally configured"
-#~ msgstr "Skonfigurowane zewnętrznie"
-
-#~ msgid "Au_thentication"
-#~ msgstr "Uwierzy_telnianie"
-
-#~ msgid "missing leap-username"
-#~ msgstr "brak „leap-username”"
-
-#~ msgid "missing leap-password"
-#~ msgstr "brak „leap-password”"
-
-#~ msgid "missing password"
-#~ msgstr "brak hasła"
-
-#~ msgid "_Type"
-#~ msgstr "_Typ"
-
-#~ msgid "missing wep-key"
-#~ msgstr "brak „wep-key”"
-
-#, c-format
-#~ msgid ""
-#~ "invalid wep-key: key with a length of %zu must contain only hex-digits"
-#~ msgstr ""
-#~ "nieprawidłowe „wep-key”: klucz o długości %zu może zawierać tylko liczby "
-#~ "szesnastkowe"
-
-#, c-format
-#~ msgid ""
-#~ "invalid wep-key: key with a length of %zu must contain only ascii "
-#~ "characters"
-#~ msgstr ""
-#~ "nieprawidłowe „wep-key”: klucz o długości %zu może zawierać tylko znaki "
-#~ "ASCII"
-
-#, c-format
-#~ msgid ""
-#~ "invalid wep-key: wrong key length %zu. A key must be either of length "
-#~ "5/13 (ascii) or 10/26 (hex)"
-#~ msgstr ""
-#~ "nieprawidłowe „wep-key”: błędna długość klucza %zu. Klucz musi być "
-#~ "długości 5/13 (ASCII) lub 10/26 (szesnastkowy)"
-
-#~ msgid "invalid wep-key: passphrase must be non-empty"
-#~ msgstr "nieprawidłowe „wep-key”: hasło nie może być puste"
-
-#~ msgid "invalid wep-key: passphrase must be shorter than 64 characters"
-#~ msgstr "nieprawidłowe „wep-key”: hasło nie może być krótsze niż 64 znaki"
-
-#~ msgid "Open System"
-#~ msgstr "System otwarty"
-
-#~ msgid "Shared Key"
-#~ msgstr "Klucz współdzielony"
-
-#~ msgid "1 (Default)"
-#~ msgstr "1 (domyślnie)"
-
-#~ msgid "_Key"
-#~ msgstr "_Klucz"
-
-# checkbox
-#~ msgid "Sho_w key"
-#~ msgstr "_Wyświetlanie klucza"
-
-#~ msgid "WEP inde_x"
-#~ msgstr "Inde_ks WEP"
-
-#, c-format
-#~ msgid ""
-#~ "invalid wpa-psk: invalid key-length %zu. Must be [8,63] bytes or 64 hex "
-#~ "digits"
-#~ msgstr ""
-#~ "nieprawidłowe „wpa-psk”: nieprawidłowe „key-length” %zu. Musi wynosić "
-#~ "[8,63] bajty lub 64 cyfry szesnastkowe"
-
-#~ msgid "invalid wpa-psk: cannot interpret key with 64 bytes as hex"
-#~ msgstr ""
-#~ "nieprawidłowe „wpa-psk”: nie można zinterpretować klucza o 64 bajtach "
-#~ "jako szesnastkowy"
