--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,19 @@
 =======================================================
+network-manager-applet-1.24.0
+Overview of changes since network-manager-applet-1.22.0
+=======================================================
+
+* If Polkit permissions allow it, create system connections (instead
+  of user-restricted ones) when clicking on a Wi-Fi network in the
+  applet.
+* Fix display of blurry applet icon.
+* Use the "port" word for dependend devices and profiles in the
+  editor.
+* Support storing and retrieving WireGuard preshared-key into/from a
+  keyring.
+* Update translations.
+
+=======================================================
 network-manager-applet-1.22.0
 Overview of changes since network-manager-applet-1.20.0
 =======================================================
