--- a/po/lt.po
+++ b/po/lt.po
@@ -10,10 +10,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: NetworkManager HEAD\n"
-"Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-"
-"applet/\n"
-"POT-Creation-Date: 2021-07-05 11:47+0200\n"
-"PO-Revision-Date: 2021-01-05 12:42+0200\n"
+"Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-applet/"
+"issues\n"
+"POT-Creation-Date: 2021-07-08 18:17+0000\n"
+"PO-Revision-Date: 2021-09-07 21:23+0300\n"
 "Last-Translator: Aurimas Černius <aurisc4@gmail.com>\n"
 "Language-Team: Lietuvių <gnome-lt@lists.akl.lt>\n"
 "Language: lt\n"
@@ -22,7 +22,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n"
 "%100<10 || n%100>=20) ? 1 : 2)\n"
-"X-Generator: Gtranslator 3.38.0\n"
+"X-Generator: Gtranslator 40.0\n"
 "X-Project-Style: gnome\n"
 
 #: nm-applet.desktop.in:3 src/applet-dialogs.c:724 src/applet.c:3258
@@ -32,6 +32,10 @@ msgstr "Tinklas"
 #: nm-applet.desktop.in:4
 msgid "Manage your network connections"
 msgstr "Tvarkyti tinklo ryšius"
+
+#: nm-applet.desktop.in:5
+msgid "nm-device-wireless"
+msgstr "nm-device-wireless"
 
 #: nm-connection-editor.appdata.xml.in:7
 msgid "NetworkManager"
@@ -68,6 +72,10 @@ msgstr "Sudėtingesnė tinklo konfigūracija"
 #: nm-connection-editor.desktop.in:4
 msgid "Manage and change your network connection settings"
 msgstr "Tvarkykite ir keiskite savo tinklo ryšių nustatymus"
+
+#: nm-connection-editor.desktop.in:5
+msgid "preferences-system-network"
+msgstr "preferences-system-network"
 
 #: shared/nm-utils/nm-shared-utils.c:793
 #, c-format
@@ -1195,7 +1203,6 @@ msgid "_Primary"
 msgstr "_Pirminis"
 
 #: src/connection-editor/ce-page-bond.ui:495
-#, fuzzy
 msgid ""
 "The interface name of the primary device. If set, this device will always be "
 "the active port when it is available."
@@ -2120,8 +2127,9 @@ msgid "C_KN"
 msgstr "C_KN"
 
 #: src/connection-editor/ce-page-macsec.ui:206
-msgid " The pre-shared Connectivity-association Key Name"
-msgstr " Iš anksto bendrinamo „Connectivity-association Key“ rakto pavadinimas"
+#| msgid " The pre-shared Connectivity-association Key Name"
+msgid "The pre-shared Connectivity-association Key Name"
+msgstr "Iš anksto bendrinamo Connectivity-association rakto pavadinimas"
 
 #: src/connection-editor/ce-page-macsec.ui:217
 msgid "Parameters"
@@ -3880,28 +3888,27 @@ msgstr "MACSEC ryšys %d"
 
 #: src/connection-editor/page-master.c:221
 #: src/connection-editor/page-master.c:232
-#, fuzzy
 msgid "Duplicate ports"
-msgstr "Dubliuoti pavaldieji"
+msgstr "Dubliuoti prievadai"
 
 #: src/connection-editor/page-master.c:222
-#, fuzzy, c-format
+#, c-format
 msgid "Ports “%s” and “%s” both apply to device “%s”"
-msgstr "Pavaldieji „%s“ ir „%s“ abu yra taikomi įrenginiui „%s“"
+msgstr "Prievadai „%s“ ir „%s“ abu yra taikomi įrenginiui „%s“"
 
 #: src/connection-editor/page-master.c:233
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Ports “%s” and “%s” apply to different virtual ports (“%s” and “%s”) of the "
 "same physical device."
 msgstr ""
-"Pavaldieji „%s“ ir „%s“ yra taikomi skirtingiems virtualiems prievadams "
-"(„%s“ ir „%s“) tame pačiame fiziniame įrenginyje."
+"Prievadai „%s“ ir „%s“ yra taikomi skirtingiems virtualiems prievadams („%s“ "
+"ir „%s“) tame pačiame fiziniame įrenginyje."
 
 #: src/connection-editor/page-master.c:357
 #, c-format
 msgid "%s port %d"
-msgstr ""
+msgstr "%s yra prievadas %d"
 
 #: src/connection-editor/page-mobile.c:297
 msgid "Could not load mobile broadband user interface."
@@ -4233,9 +4240,11 @@ msgid "Usage:"
 msgstr "Naudojimas:"
 
 #: src/main.c:30
+#| msgid ""
+#| "This program is a component of NetworkManager (https://wiki.gnome.org/"
+#| "Projects/NetworkManager/)."
 msgid ""
-"This program is a component of NetworkManager (https://wiki.gnome.org/"
-"Projects/NetworkManager/)."
+"This program is a component of NetworkManager (https://networkmanager.dev)."
 msgstr ""
 "Ši programa yra NetworkManager (https://wiki.gnome.org/Projects/"
 "NetworkManager/) dalis."
@@ -4362,12 +4371,6 @@ msgstr "PEM liudijimai (*.pem, *.crt, *.cer)"
 #: src/utils/utils.c:546
 msgid "DER, PEM, or PKCS#12 private keys (*.der, *.pem, *.p12, *.key)"
 msgstr "DER, PEM ar PKCS#12 privatieji raktai (*.der, *.pem, *.p12, *.key)"
-
-#~ msgid "nm-device-wireless"
-#~ msgstr "nm-device-wireless"
-
-#~ msgid "preferences-system-network"
-#~ msgstr "preferences-system-network"
 
 #~ msgid "missing EAP-FAST PAC file"
 #~ msgstr "trūksta EAP-FAST PAC failo"
