Update Polish translation

--- a/po/pl.po
+++ b/po/pl.po
@@ -1,19 +1,19 @@
 # Polish translation for network-manager-applet.
-# Copyright © 2006-2021 the network-manager-applet authors.
+# Copyright © 2006-2022 the network-manager-applet authors.
 # This file is distributed under the same license as the network-manager-applet package.
 # Wadim Dziedzic <wdziedzic@aviary.pl>, 2006-2008.
 # Tomasz Dominikowski <dominikowski@gmail.com>, 2007-2009.
 # Piotr Zaryk <pzaryk@aviary.pl>, 2008.
-# Piotr Drąg <piotrdrag@gmail.com>, 2009-2021.
-# Aviary.pl <community-poland@mozilla.org>, 2006-2021.
+# Piotr Drąg <piotrdrag@gmail.com>, 2009-2022.
+# Aviary.pl <community-poland@mozilla.org>, 2006-2022.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: network-manager-applet\n"
-"Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-"
-"applet/\n"
-"POT-Creation-Date: 2022-03-21 20:51+0100\n"
-"PO-Revision-Date: 2021-11-07 13:44+0100\n"
+"Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-applet/"
+"issues\n"
+"POT-Creation-Date: 2022-03-21 21:00+0000\n"
+"PO-Revision-Date: 2022-03-27 14:55+0200\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <community-poland@mozilla.org>\n"
 "Language: pl\n"
@@ -30,6 +30,10 @@ msgstr "Sieć"
 #: nm-applet.desktop.in:4
 msgid "Manage your network connections"
 msgstr "Zarządzanie połączeniami sieciowymi"
+
+#: nm-applet.desktop.in:5
+msgid "nm-device-wireless"
+msgstr "nm-device-wireless"
 
 #: nm-connection-editor.appdata.xml.in:7
 msgid "NetworkManager"
@@ -66,6 +70,10 @@ msgstr "Zaawansowana konfiguracja sieci"
 #: nm-connection-editor.desktop.in:4
 msgid "Manage and change your network connection settings"
 msgstr "Zarządzanie ustawieniami połączeń sieciowych"
+
+#: nm-connection-editor.desktop.in:5
+msgid "preferences-system-network"
+msgstr "preferences-system-network"
 
 #: shared/nm-utils/nm-shared-utils.c:793
 #, c-format
@@ -148,9 +156,8 @@ msgid "secure."
 msgstr "zabezpieczona."
 
 #: src/ap-menu-item.c:77
-#, fuzzy
 msgid "insecure."
-msgstr "zabezpieczona."
+msgstr "niezabezpieczona."
 
 #: src/applet-device-broadband.c:147
 msgid "Wrong PUK code; please contact your provider."
@@ -627,8 +634,8 @@ msgstr ""
 "Wadim Dziedzic <wdziedzic@aviary.pl>, 2006-2008\n"
 "Tomasz Dominikowski <dominikowski@gmail.com>, 2007-2009\n"
 "Piotr Zaryk <pzaryk@aviary.pl>, 2008\n"
-"Piotr Drąg <piotrdrag@gmail.com>, 2009-2021\n"
-"Aviary.pl <community-poland@mozilla.org>, 2006-2021"
+"Piotr Drąg <piotrdrag@gmail.com>, 2009-2022\n"
+"Aviary.pl <community-poland@mozilla.org>, 2006-2022"
 
 #: src/applet-dialogs.c:1147
 msgid ""
@@ -4391,9 +4398,3 @@ msgstr "Certyfikaty PEM (*.pem, *.crt, *.cer)"
 msgid "DER, PEM, or PKCS#12 private keys (*.der, *.pem, *.p12, *.key)"
 msgstr ""
 "Certyfikaty DER, PEM lub klucze prywatne PKCS#12 (*.der, *.pem, *.p12, *.key)"
-
-#~ msgid "nm-device-wireless"
-#~ msgstr "nm-device-wireless"
-
-#~ msgid "preferences-system-network"
-#~ msgstr "preferences-system-network"
