Update Hungarian translation
https://gitlab.gnome.org/GNOME/network-manager-applet/-/merge_requests/115

--- a/po/hu.po
+++ b/po/hu.po
@@ -359,9 +359,8 @@ msgid "Wi-Fi is disabled by hardware switch"
 msgstr "A Wi-Fi hardveres kapcsolóval kikapcsolva"
 
 #: src/applet-device-wifi.c:887
-#, fuzzy
 msgid "_Available networks"
-msgstr "Elérhető"
+msgstr "Elérhető hálózatok"
 
 #: src/applet-device-wifi.c:1083
 msgid "Wi-Fi Networks Available"
