--- a/po/af.po
+++ b/po/af.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: network-manager-applet master\n"
 "Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-"
 "applet/\n"
-"POT-Creation-Date: 2022-03-21 20:51+0100\n"
+"POT-Creation-Date: 2022-05-30 11:43+0200\n"
 "PO-Revision-Date: 2011-04-04 08:18+0200\n"
 "Last-Translator: F Wolff <friedel@translate.org.za>\n"
 "Language-Team: translate-discuss-af@lists.sourceforge.net\n"
@@ -444,7 +444,7 @@ msgstr "LEAP"
 msgid "Dynamic WEP"
 msgstr "Dinamiese-WEP"
 
-#: src/applet-dialogs.c:64 src/applet-dialogs.c:226 src/applet-dialogs.c:228
+#: src/applet-dialogs.c:64 src/applet-dialogs.c:226
 msgid "WPA/WPA2"
 msgstr "WPA/WPA2"
 
@@ -457,6 +457,11 @@ msgstr "Adresse"
 #: src/applet-dialogs.c:224
 msgid "WEP"
 msgstr "WEP"
+
+#: src/applet-dialogs.c:228
+#, fuzzy
+msgid "WPA/WPA2/WPA3"
+msgstr "WPA/WPA2"
 
 #: src/applet-dialogs.c:230
 msgid "WPA3"
@@ -4028,11 +4033,11 @@ msgid "Dynamic WEP (802.1X)"
 msgstr ""
 
 #: src/connection-editor/page-wifi-security.c:410
-msgid "WPA & WPA2 Personal"
+msgid "WPA/WPA2/WPA3 Personal"
 msgstr ""
 
 #: src/connection-editor/page-wifi-security.c:423
-msgid "WPA & WPA2 Enterprise"
+msgid "WPA/WPA2 Enterprise"
 msgstr ""
 
 #: src/connection-editor/page-wifi-security.c:436
