po:ca,es: fixed wrong expressions
https://gitlab.gnome.org/GNOME/network-manager-applet/-/merge_requests/120
https://gitlab.gnome.org/GNOME/network-manager-applet/-/merge_requests/119

--- a/po/es.po
+++ b/po/es.po
@@ -4135,7 +4135,7 @@ msgstr "WPA3 personal"
 #: src/connection-editor/page-wifi-security.c:449
 #: src/connection-editor/page-wifi-security.c:457
 msgid "Enhanced Open"
-msgstr "Abrir mejorado"
+msgstr "Red Abierta Mejorada"
 
 #: src/connection-editor/page-wifi-security.c:503
 msgid "Could not load Wi-Fi security user interface; missing Wi-Fi setting."
