--- a/po/ca.po
+++ b/po/ca.po
@@ -4147,7 +4147,7 @@ msgstr "WPA3 Personal"
 #: src/connection-editor/page-wifi-security.c:449
 #: src/connection-editor/page-wifi-security.c:457
 msgid "Enhanced Open"
-msgstr "Obertura millorada"
+msgstr "Xarxa Oberta Millorada"
 
 #: src/connection-editor/page-wifi-security.c:503
 msgid "Could not load Wi-Fi security user interface; missing Wi-Fi setting."
