po/ja: fix a translation for VPN type dialog
https://bugzilla.redhat.com/show_bug.cgi?id=2083047

[lkundrak@v3.sk: wrote a commit message]

--- a/po/ja.po
+++ b/po/ja.po
@@ -1092,7 +1092,7 @@ msgid ""
 msgstr ""
 "新規接続で使用する接続の種類を選択してください。\n"
 "\n"
-"VPN 接続の一覧に、作成したい VPN 接続がにない場合は、正しい VPN プラグインが"
+"作成したい VPN 接続が VPN 接続の一覧にない場合は、正しい VPN プラグインが"
 "インストールされていない可能性があります。"
 
 #: src/connection-editor/ce-page-bluetooth.ui:35
