Update Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -16,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-"
 "applet/\n"
 "POT-Creation-Date: 2022-05-30 11:43+0200\n"
-"PO-Revision-Date: 2018-06-24 20:41+0100\n"
+"PO-Revision-Date: 2022-03-04 20:41+0100\n"
 "Last-Translator: Jordi Mas i Hernàndez <jmas@softcatala.org>\n"
 "Language-Team: Catalan <kde-i18n-ca@kde.org>\n"
 "Language: ca\n"
@@ -1929,7 +1929,7 @@ msgstr "Connexió local"
 #: src/connection-editor/ce-page-ip6.ui:24 src/connection-editor/page-ip4.c:175
 #: src/connection-editor/page-ip6.c:205
 msgid "Shared to other computers"
-msgstr "Compartit a altres ordinadors"
+msgstr "Compartit amb altres ordinadors"
 
 #: src/connection-editor/ce-page-ip4.ui:47
 #: src/connection-editor/ce-page-ip6.ui:81
@@ -3045,7 +3045,7 @@ msgstr "error no especificat"
 
 #: src/connection-editor/ce-page.c:268
 msgid "Preserve"
-msgstr "Preserva"
+msgstr "Conserva"
 
 #: src/connection-editor/ce-page.c:269
 msgid "Permanent"
@@ -3103,7 +3103,7 @@ msgstr "no es pot analitzar el nom del dispositiu"
 
 #: src/connection-editor/ce-page.c:563
 msgid "invalid hardware address"
-msgstr "Adreça del maquinari no vàlida"
+msgstr "adreça del maquinari no vàlida"
 
 #: src/connection-editor/ce-page.c:585
 #, c-format
@@ -3426,7 +3426,7 @@ msgid ""
 "editor. They will be cleared upon save."
 msgstr ""
 "Avís: la connexió conté algunes propietats no suportades per l'editor. "
-"Aquestes es suprimiran després de desar-se."
+"Aquestes se suprimiran després de desar-se."
 
 #: src/connection-editor/nm-connection-editor.c:751
 msgid "Error initializing editor"
@@ -3705,7 +3705,7 @@ msgstr "No s'ha pogut carregar la interfície d'usuari per a la connexió DSL."
 
 #: src/connection-editor/page-dsl.c:306
 msgid "missing parent interface"
-msgstr "Interfície pare perduda"
+msgstr "falta la interfície pare"
 
 #: src/connection-editor/page-dsl.c:351
 #, c-format
@@ -3724,7 +3724,7 @@ msgstr ""
 
 #: src/connection-editor/page-ethernet.c:248
 msgid "ignored"
-msgstr "Ignorada"
+msgstr "ignorada"
 
 #: src/connection-editor/page-ethernet.c:336
 msgid "Could not load ethernet user interface."
