Update Polish translation

--- a/po/pl.po
+++ b/po/pl.po
@@ -1,19 +1,19 @@
 # Polish translation for network-manager-applet.
-# Copyright © 2006-2022 the network-manager-applet authors.
+# Copyright © 2006-2023 the network-manager-applet authors.
 # This file is distributed under the same license as the network-manager-applet package.
 # Wadim Dziedzic <wdziedzic@aviary.pl>, 2006-2008.
 # Tomasz Dominikowski <dominikowski@gmail.com>, 2007-2009.
 # Piotr Zaryk <pzaryk@aviary.pl>, 2008.
-# Piotr Drąg <piotrdrag@gmail.com>, 2009-2022.
-# Aviary.pl <community-poland@mozilla.org>, 2006-2022.
+# Piotr Drąg <piotrdrag@gmail.com>, 2009-2023.
+# Aviary.pl <community-poland@mozilla.org>, 2006-2023.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: network-manager-applet\n"
-"Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-"
-"applet/\n"
-"POT-Creation-Date: 2023-08-03 11:40+0200\n"
-"PO-Revision-Date: 2022-11-20 15:12+0100\n"
+"Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-applet/"
+"issues\n"
+"POT-Creation-Date: 2023-08-09 12:34+0000\n"
+"PO-Revision-Date: 2023-08-10 15:33+0200\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <community-poland@mozilla.org>\n"
 "Language: pl\n"
@@ -127,10 +127,22 @@ msgstr ""
 "używania apletu."
 
 #: org.gnome.nm-applet.gschema.xml.in:36
+msgid "Suppress broadband device unlock prompt"
+msgstr "Wyłączenie zapytania o odblokowanie urządzenia komórkowego"
+
+#: org.gnome.nm-applet.gschema.xml.in:37
+msgid ""
+"Set to true to not prompt for PIN/PUK when providing it is required to "
+"unlock a broadband device."
+msgstr ""
+"Ustawienie na „true” spowoduje, że zapytanie o kod PIN/PUK nie będzie "
+"wyświetlane, kiedy jest on potrzebny do odblokowania urządzenia komórkowego."
+
+#: org.gnome.nm-applet.gschema.xml.in:41
 msgid "Show the applet in notification area"
 msgstr "Wyświetlanie apletu w obszarze powiadamiania"
 
-#: org.gnome.nm-applet.gschema.xml.in:37
+#: org.gnome.nm-applet.gschema.xml.in:42
 msgid "Set to FALSE to disable displaying the applet in the notification area."
 msgstr ""
 "Ustawienie na „false” wyłącza wyświetlanie apletu w obszarze powiadamiania."
@@ -232,45 +244,45 @@ msgstr "Błędny kod PIN. Proszę skontaktować się z dostawcą."
 msgid "Sending unlock code…"
 msgstr "Wysyłanie kodu odblokowania…"
 
-#: src/applet-device-broadband.c:725 src/applet-dialogs.c:521
+#: src/applet-device-broadband.c:729 src/applet-dialogs.c:521
 #, c-format
 msgid "Mobile Broadband (%s)"
 msgstr "Komórkowe (%s)"
 
-#: src/applet-device-broadband.c:727
+#: src/applet-device-broadband.c:731
 #: src/connection-editor/connection-helpers.c:95
 #: src/connection-editor/page-mobile.c:295
 msgid "Mobile Broadband"
 msgstr "Komórkowe"
 
-#: src/applet-device-broadband.c:780 src/applet-device-bt.c:61
+#: src/applet-device-broadband.c:784 src/applet-device-bt.c:61
 #: src/applet-device-ethernet.c:107
 msgid "Available"
 msgstr "Dostępne"
 
 #. Default connection item
-#: src/applet-device-broadband.c:793
+#: src/applet-device-broadband.c:797
 msgid "New Mobile Broadband connection…"
 msgstr "Nowe połączenie komórkowe…"
 
-#: src/applet-device-broadband.c:809 src/applet-device-bt.c:75
+#: src/applet-device-broadband.c:813 src/applet-device-bt.c:75
 #: src/applet-device-ethernet.c:124 src/applet-device-wifi.c:1251
 msgid "Connection Established"
 msgstr "Ustanowiono połączenie"
 
-#: src/applet-device-broadband.c:810
+#: src/applet-device-broadband.c:814
 msgid "You are now connected to the Mobile Broadband network."
 msgstr "Połączono z siecią komórkową."
 
-#: src/applet-device-broadband.c:950 src/applet-device-broadband.c:956
+#: src/applet-device-broadband.c:954 src/applet-device-broadband.c:960
 msgid "Mobile Broadband network."
 msgstr "Sieć komórkowa."
 
-#: src/applet-device-broadband.c:951
+#: src/applet-device-broadband.c:955
 msgid "You are now registered on the home network."
 msgstr "Zarejestrowano w sieci domowej."
 
-#: src/applet-device-broadband.c:957
+#: src/applet-device-broadband.c:961
 msgid "You are now registered on a roaming network."
 msgstr "Zarejestrowano w sieci roamingowej."
 
@@ -694,8 +706,8 @@ msgstr ""
 "Wadim Dziedzic <wdziedzic@aviary.pl>, 2006-2008\n"
 "Tomasz Dominikowski <dominikowski@gmail.com>, 2007-2009\n"
 "Piotr Zaryk <pzaryk@aviary.pl>, 2008\n"
-"Piotr Drąg <piotrdrag@gmail.com>, 2009-2022\n"
-"Aviary.pl <community-poland@mozilla.org>, 2006-2022"
+"Piotr Drąg <piotrdrag@gmail.com>, 2009-2023\n"
+"Aviary.pl <community-poland@mozilla.org>, 2006-2023"
 
 #: src/applet-dialogs.c:1147
 msgid ""
@@ -2369,7 +2381,7 @@ msgstr "Zaa_wansowane…"
 
 #: src/connection-editor/ce-page-team-port.ui:108
 msgid "Set by controller"
-msgstr "Ustawione przez główne"
+msgstr "Ustawione przez kontrolera"
 
 #: src/connection-editor/ce-page-team-port.ui:112
 #: src/connection-editor/ce-page-team.ui:85
@@ -2819,7 +2831,7 @@ msgid ""
 "carrier in the controller interface, value can be 1 – 255."
 msgstr ""
 "Określa minimalną liczbę portów, które muszą być aktywne przed zapewnieniem "
-"operatora w głównym interfejsie, wartość może wynosić 1-255."
+"operatora w interfejsie kontrolera, wartość może wynosić 1-255."
 
 #: src/connection-editor/ce-page-team.ui:972
 msgid "This selects the policy of how the aggregators will be selected."
