--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,12 @@
 =======================================================
+network-manager-applet-1.36.0
+Overview of changes since network-manager-applet-1.34.0
+=======================================================
+
+* Support WiFi's cloned-mac "stable-ssid"
+* Update translations.
+
+=======================================================
 network-manager-applet-1.34.0
 Overview of changes since network-manager-applet-1.32.0
 =======================================================
