Update Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -16,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-applet/"
 "issues\n"
 "POT-Creation-Date: 2024-08-06 04:11+0000\n"
-"PO-Revision-Date: 2024-09-14 00:11+0200\n"
+"PO-Revision-Date: 2025-03-03 00:11+0200\n"
 "Last-Translator: Jordi Mas i Hernàndez <jmas@softcatala.org>\n"
 "Language-Team: Catalan <kde-i18n-ca@kde.org>\n"
 "Language: ca\n"
@@ -77,7 +77,7 @@ msgstr "Desactiva les notificacions de connexió"
 #: org.gnome.nm-applet.gschema.xml.in:7
 msgid "Set this to true to disable notifications when connecting to a network."
 msgstr ""
-"Establiu-lo com a cert per desactivar les notificacions al connectar-se a "
+"Establiu-lo com a cert per a desactivar les notificacions al connectar-se a "
 "una xarxa."
 
 #: org.gnome.nm-applet.gschema.xml.in:11
@@ -88,7 +88,7 @@ msgstr "Desactiva les notificacions de desconnexió"
 msgid ""
 "Set this to true to disable notifications when disconnecting from a network."
 msgstr ""
-"Establiu-lo com a cert per desactivar les notificacions al desconnectar-se "
+"Establiu-lo com a cert per a desactivar les notificacions al desconnectar-se "
 "d'una xarxa."
 
 #: org.gnome.nm-applet.gschema.xml.in:16
@@ -100,7 +100,7 @@ msgid ""
 "Set this to true to disable notifications when connecting to or "
 "disconnecting from a VPN."
 msgstr ""
-"Establiu-lo com a cert per desactivar les notificacions al connectar-se o "
+"Establiu-lo com a cert per a desactivar les notificacions al connectar-se o "
 "desconnectar-se d'una VPN."
 
 #: org.gnome.nm-applet.gschema.xml.in:21
@@ -111,7 +111,7 @@ msgstr "Suprimeix les notificacions de xarxes disponibles"
 msgid ""
 "Set this to true to disable notifications when Wi-Fi networks are available."
 msgstr ""
-"Establiu-lo com a cert per desactivar les notificacions quan hi hagi xarxes "
+"Establiu-lo com a cert per a desactivar les notificacions quan hi hagi xarxes "
 "Wifi disponibles."
 
 #: org.gnome.nm-applet.gschema.xml.in:26
@@ -131,12 +131,12 @@ msgstr "Desactiva la creació de Wifi"
 msgid ""
 "Set to true to disable creation of adhoc networks when using the applet."
 msgstr ""
-"Establiu com a cert per desactivar la creació de xarxes ad hoc a l'usar la "
+"Establiu com a cert per a desactivar la creació de xarxes ad hoc a l'usar la "
 "miniaplicació."
 
 #: org.gnome.nm-applet.gschema.xml.in:36
 msgid "Suppress broadband device unlock prompt"
-msgstr "Elimina la petició per desblocar un dispositiu de banda ampla"
+msgstr "Elimina la petició per a desblocar un dispositiu de banda ampla"
 
 #: org.gnome.nm-applet.gschema.xml.in:37
 msgid ""
@@ -144,7 +144,7 @@ msgid ""
 "unlock a broadband device."
 msgstr ""
 "Establiu a «true» perquè no demani el PIN/PUK quan es requereixi "
-"proporcionar-los per desblocar un dispositiu de banda ampla."
+"proporcionar-los per a desblocar un dispositiu de banda ampla."
 
 #: org.gnome.nm-applet.gschema.xml.in:41
 msgid "Show the applet in notification area"
@@ -153,7 +153,7 @@ msgstr "Mostra la miniaplicació a l'àrea de notificació"
 #: org.gnome.nm-applet.gschema.xml.in:42
 msgid "Set to FALSE to disable displaying the applet in the notification area."
 msgstr ""
-"Establiu-lo a «FALSE» per desactivar la presència de la miniaplicació a "
+"Establiu-lo a «FALSE» per a desactivar la presència de la miniaplicació a "
 "l'àrea de notificació."
 
 #: shared/nm-utils/nm-shared-utils.c:793
@@ -698,7 +698,7 @@ msgid ""
 "Copyright © 2005-2008 Novell, Inc.\n"
 "and many other community contributors and translators"
 msgstr ""
-"Copyright © 2004-2014 Red Hat, Inc.\n"
+"Copyright © 2004-2017 Red Hat, Inc.\n"
 "Copyright © 2005-2008 Novell, Inc.\n"
 "i molts col·laboradors i traductors voluntaris"
 
@@ -2533,7 +2533,7 @@ msgstr "Retard a_bans del primer enviament"
 #: src/connection-editor/ce-page-team-port.ui:491
 #: src/connection-editor/ce-page-team.ui:1218
 msgid "_Maximum missed replies"
-msgstr "_Màxim de les respostes absents"
+msgstr "_Màxim de respostes absents"
 
 #: src/connection-editor/ce-page-team-port.ui:506
 #: src/connection-editor/ce-page-team.ui:1233
@@ -2603,7 +2603,7 @@ msgstr ""
 #: src/connection-editor/ce-page-team-port.ui:604
 #: src/connection-editor/ce-page-team.ui:1331
 msgid "S_end on inactive ports"
-msgstr "_Envia usant els ports inactius"
+msgstr "_Envia als ports inactius"
 
 #: src/connection-editor/ce-page-team-port.ui:608
 #: src/connection-editor/ce-page-team.ui:1335
