Update Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -16,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/network-manager-applet/"
 "issues\n"
 "POT-Creation-Date: 2024-08-06 04:11+0000\n"
-"PO-Revision-Date: 2025-03-03 00:11+0200\n"
+"PO-Revision-Date: 2025-04-06 00:11+0200\n"
 "Last-Translator: Jordi Mas i Hernàndez <jmas@softcatala.org>\n"
 "Language-Team: Catalan <kde-i18n-ca@kde.org>\n"
 "Language: ca\n"
@@ -3436,7 +3436,7 @@ msgstr "Prefix"
 #: src/connection-editor/nm-connection-editor.c:97
 #, c-format
 msgid "Editing %s"
-msgstr "S'està editant %s"
+msgstr "Edició de %s"
 
 #: src/connection-editor/nm-connection-editor.c:101
 msgid "Editing un-named connection"
